# thesis

./: .clang-format  CMakeLists.txt  Makefile
data/: data.csv  model.csv
src/: converter.cpp  converter.hpp  datamodel.cpp  datamodel.hpp  main.cpp  model.cpp  model.hpp  output.cpp  output.hpp  training.cpp  training.hpp  utils.cpp  utils.hpp  vehicle.cpp  vehicle.hpp
